[Passpoint] Fix issue when getting matching passpoint WifiConfig
1. Only pass matched WifiConfig from WifiConfigManager to WifiTracker
2. Trigger passpoint matching every new scan result available to reduce
the delay of showing newly matched profile in Wifi Picker.

Bug: 182409558
Test: atest FrameworksWifiTests
Change-Id: I1515e97217adad2a84de0d1ab0d1a92d62f59916